tests/baselines/reference/typeParameterAsBaseType.errors.txt
==== tests/cases/conformance/types/typeParameters/typeParameterAsBaseType.ts (4 errors) ====
    // type parameters cannot be used as base types
    // these are all errors
    
    class C<T> extends T { }
                       ~
!!! error TS2311: A class may only extend another class.
    class C2<T, U> extends U { }
                           ~
!!! error TS2311: A class may only extend another class.
    
    interface I<T> extends T { }
                           ~
!!! error TS2312: An interface may only extend a class or another interface.
    interface I2<T, U> extends U { }
                               ~
!!! error TS2312: An interface may only extend a class or another interface.
    
    